ecommerce/infra/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: platform-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-apache
  namespace: platform-service
spec:
  selector:
    matchLabels:
      run: php-apache
  # remove replica if using gitops
  replicas: 1
  template:
    metadata:
      labels:
        run: php-apache
    spec:
      containers:
      - name: php-apache
        image: k8s.gcr.io/hpa-example
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: php-apache
  namespace: platform-service
spec:
  ports:
  - port: 80
  selector:
    run: php-apache
